<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minkindr_conversions</name>
  <version>0.0.0</version>
  <description>Conversions between minkindr and ROS messages and TF.</description>
  <maintainer email="helenoleynikova@gmail.com">Helen Oleynikova</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>minkindr</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
